--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 
   "private": true,
 
-  "homepage": "https://github.io/Didusantos/React-UNP-Class.git",
+  "homepage": "https://Didusantos.github.io/React-UNP-Class",
 
   "dependencies": {
 
